--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Voyage Vault!</h1>
 
-Welcome to your new app.
+Welcome to Voyage Vault.
+
+Add your voyage expenses to find out fairly divide the cost between all trip participants.
