--- a/Components/Pages/Popup.razor
+++ b/Components/Pages/Popup.razor
@@ -29,7 +29,7 @@
     [Parameter]
     public string? BodyText { get; set; }
 
-    public void Show(string bodyText, string headerText = "")
+    public void Show(string bodyText, string headerText = "Error in processing")
     {
         HeaderText = headerText;
         BodyText = bodyText;
